--- a/style.css
+++ b/style.css
@@ -188,9 +188,9 @@ body.dark #moon {
   justify-content: center;
   min-height: 100vh;
   flex-direction: column;
-  width: 50%;
+  width: 100%;
   padding-left: 20px;
-  margin-top: 10%;
+  margin-top: 5%;
 }
 
 .featured-text .hello {
@@ -307,14 +307,6 @@ i {
   cursor: pointer;
 }
 
-.featured-image {
-  display: flex;
-  justify-content: right;
-  align-items: center;
-  min-height: 80vh;
-  width: 100%;
-}
-
 .image {
   margin-top: 10%;
   width: 500px;
@@ -393,17 +385,6 @@ i {
   position: relative;
 }
 
-.about-me .profile {
-  border-radius: 50%;
-  position: absolute;
-  bottom: 100%;
-  left: 20px;
-  z-index: 1;
-  background-color: #fff;
-  max-width: 90px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-}
-
 .about-me h2 {
   color: var(--text-color);
 }
@@ -413,14 +394,13 @@ i {
   color: var(--text-color);
 }
 
-.about-info .about-me-btn {
+.about-info {
   text-decoration: none;
   font-size: 15px;
   padding: 10px 20px;
   cursor: pointer;
   border: none;
   border-radius: 20px;
-  background: #8749f2;
   color: #fff;
   margin-top: 20px;
   font-weight: 500;
@@ -452,15 +432,22 @@ i {
   background: transparent;
   box-shadow: 1px 8px 10px 2px var(--first-shadow);
   padding: 10px;
+  overflow: hidden; /* Ensure content stays within the box */
 }
 
 .skill-item i {
-  font-size: 40px;
+  font-size: 35px;
   color: #8749f2;
 }
 
+.skill-item img {
+  width: 45px; /* Adjust size as needed */
+  height: auto;
+  margin-bottom: 5px; /* Space between image and text */
+}
+
 .skill-text {
-  font-size: 16px;
+  font-size: 12px;
   color: var(--text-color);
   margin-top: 5px;
 }
@@ -497,28 +484,41 @@ i {
 
 .project-box {
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
-  width: calc(33.33% - 20px); /* Adjust width to fit three boxes in a row */
+  justify-content: center;
+  align-items: flex-start;
+  width: calc(25% - 15px); /* Adjust width to fit four boxes in a row */
   height: 250px;
   background: transparent;
   border: 2px solid #fff;
   border-radius: 20px;
   box-shadow: 1px 8px 10px 2px var(--first-shadow);
+  padding: 20px;
   overflow: hidden;
-  cursor: pointer;
 }
 
-.project-box > i {
-  font-size: 50px;
-  color: #8749f2;
-  margin-bottom: 25px;
-}
-
-.project-box label {
-  font-size: 15px;
+.project-box h3 {
+  font-size: 20px;
+  margin-bottom: 10px;
   color: var(--text-color);
+}
+
+.project-box p {
+  flex-grow: 1;
+  margin-bottom: 15px;
+  color: var(--text-color);
+}
+
+.project-link {
+  font-size: 16px;
+  color: #8749f2;
+  text-decoration: none;
+  cursor: pointer;
+  align-self: flex-end;
+}
+
+.project-link:hover {
+  text-decoration: underline;
 }
 
 .contact-info::after {
@@ -567,6 +567,14 @@ i {
   text-align: center;
 }
 
+.certificate-box h3,
+.certificate-box p,
+.certificate-box i {
+  color: var(--text-color); /* Use the same text color */
+  font-weight: normal; /* Make the text weight normal */
+}
+
+.certificate-box p,
 .certificate-box i {
   display: none;
   opacity: 0;
@@ -578,6 +586,7 @@ i {
   height: 200px;
 }
 
+.certificate-box:hover p,
 .certificate-box:hover i {
   display: block;
   opacity: 1;
